# modular-esp-idf-kconfig

./: Cargo.toml  rustfmt.toml
crates/depdiag/: Cargo.toml
crates/depdiag/src/: main.rs
crates/kconfiglib/: Cargo.toml
crates/kconfiglib/src/: context.rs  lib.rs  resolve.rs  target.rs
crates/kconfiglib/src/parser/: block.rs  choice.rs  comment.rs  config.rs  error.rs  expr.rs  ifblock.rs  integer.rs  kconfig.rs  line.rs  lit_value.rs  location.rs  menu.rs  mod.rs  prompt.rs  source.rs  streams.rs  string_literal.rs  token.rs  types.rs  whitespace.rs
crates/kconfiglib/tests/esp-idf/: Kconfigs.in  Kconfigs.projbuild.in
