[package]
name = "kconfig-depdiag"
description = "Create a GraphViz or Mermaid.js diagram showing dependencies between Kconfig symbols"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
env_logger = "0.11.0"
log = "0.4.20"
modular-esp-idf-kconfig-lib = { path = "../kconfiglib" }

[dev-dependencies]
test-log = "0.2.14"
