[package]
name = "modular-esp-idf-kconfig-lib"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
lazy-regex = "3.1.0"
log = "0.4.20"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.2"
shellexpand = "3.1.0"

[dev-dependencies]
env_logger = "0.10"
test-log = "0.2"