[package]
name = "modular-esp-idf-kconfig-lib"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
log = "0.4.20"
once_cell = "1.19.0"
phf = { version = "0.11.2", features = ["macros"] }
cargshellexpand = "3.1.0"

[dev-dependencies]
env_logger = "0.10"
test-log = "0.2"
