[package]
name = "modular-esp-idf-kconfig-lib"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["clap"]
clap = ["dep:clap"]

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"], optional = true }
log = "0.4.20"
once_cell = "1.19.0"
phf = { version = "0.11.2", features = ["macros"] }
shellexpand = "3.1.0"
slotmap = "1.0.7"

[dev-dependencies]
env_logger = "0.10"
test-log = "0.2"
